--- a/lua-resty-json.vcxproj.filters
+++ b/lua-resty-json.vcxproj.filters
@@ -60,4 +60,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="dllexports.def">
+      <Filter>Source Files</Filter>
+    </None>
+  </ItemGroup>
 </Project>
